# agn_pipe

./: .cz.toml  .gitignore  .pre-commit-config.yaml  1ES1218+304_lc_daily.ecsv  SpectralWorkshop.ipynb  SpectralWorkshop_1218.ipynb  SpectralWorkshop_crab.ipynb  Workshop.ipynb  agn_pipe.def  build_apptainer.sh  pyproject.toml
agn_pipe/: __init__.py
agn_pipe/analysis/: spectral_analysis.py  variability_analysis.py
agn_pipe/data/catalogs/: 3HWC.fits  __init__.py  catalogs.py  parser.py  vtscat.fits
agn_pipe/query/: __init__.py  datastore.py  fov.py
